# ChangeLog for dev-java/jets3t
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Jun 2013; johann@j-schmitz.net jets3t-0.9.0.ebuild:
  Install doc/source if requested