@@ -1,16 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<maintainer>
-		<email>jlec@j-schmitz.net</email>
-		<name>Justin Lecher (jlec)</name>
-	</maintainer>
-	<maintainer>
-		<email>johann@j-schmitz.net</email>
-		<name>Johann Schmitz</name>
-	</maintainer>
+	<herd>java</herd>
 	<use>
 		<flag name='servlet'>Builds the gatekeeper servlet</flag>
+		<flag name='tools'>Build and install the client tools cockpit/cockpitlite, synchronize, uploader and the jets3t-gui</flag>
 	</use>
 </pkgmetadata>
 
