@@ -2,5 +2,9 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  27 Nov 2013; Johann Schmitz <ercpe@gentoo.org> jets3t-0.9.0.ebuild,
+  metadata.xml:
+  Updated ebuild for jets3t
+
   18 Jun 2013; johann@j-schmitz.net jets3t-0.9.0.ebuild:
   Install doc/source if requested
